# shader-preprocessor

./: CMakeLists.txt
spp/: ast.hpp  context.hpp  lexer.hpp  loader.hpp  spp.hpp
spptest/: spptest.cpp
src/: ast.cpp  context.cpp  lexer.ll  loader.cpp  parser.yy
tests/: eval.cpp  fulltests.cpp  parsing.cpp  testdata.hpp
